--- a/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplatePlain.templ
+++ b/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplatePlain.templ
@@ -13,8 +13,7 @@ public class TOKEN_CLASSNAME {
      * can install a custom transformation on the graphics context to scale the
      * image.
      * 
-     * @param g
-     *            Graphics context.
+     * @param g Graphics context.
      */
     public static void paint(Graphics2D g) {
         Shape shape = null;
@@ -30,7 +29,7 @@ public class TOKEN_CLASSNAME {
             }
         }
         
-        TOKEN_PAINTING_CODE
+TOKEN_PAINTING_CODE
     }
 
     /**
