--- a/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplateResizable.templ
+++ b/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplateResizable.templ
@@ -2,6 +2,9 @@ TOKEN_PACKAGE
 
 import java.awt.*;
 import java.awt.geom.*;
+import static java.awt.Color.*;
+import static java.awt.MultipleGradientPaint.CycleMethod.*;
+import static java.awt.MultipleGradientPaint.ColorSpaceType.*;
 
 /**
  * This class has been automatically generated using <a
