Javadoc changes in the class templates

--- a/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplatePlain.templ
+++ b/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplatePlain.templ
@@ -7,10 +7,11 @@ import static java.awt.MultipleGradientPaint.CycleMethod.*;
 import static java.awt.MultipleGradientPaint.ColorSpaceType.*;
 
 /**
- * This class has been automatically generated using <a
- * href="https://flamingo.dev.java.net">Flamingo SVG transcoder</a>.
+ * This class has been automatically generated using
+ * <a href="https://flamingo.dev.java.net">Flamingo SVG transcoder</a>.
  */
 public class TOKEN_CLASSNAME {
+
     /**
      * Paints the transcoded SVG image on the specified graphics context. You
      * can install a custom transformation on the graphics context to scale the
