Use a stack for the transformations

--- a/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplatePlain.templ
+++ b/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplatePlain.templ
@@ -31,6 +31,8 @@ public class TOKEN_CLASSNAME {
             }
         }
         
+        java.util.LinkedList<AffineTransform> transformations = new java.util.LinkedList<AffineTransform>();
+        
 TOKEN_PAINTING_CODE
     }
 
