--- a/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplateResizable.templ
+++ b/src/main/resources/org/pushingpixels/flamingo/api/svg/SvgTranscoderTemplateResizable.templ
@@ -31,6 +31,8 @@ public class TOKEN_CLASSNAME implements org.pushingpixels.flamingo.api.common.ic
             }
         }
         
+        java.util.LinkedList<AffineTransform> transformations = new java.util.LinkedList<AffineTransform>();
+        
 TOKEN_PAINTING_CODE
     }
 
